# borealis

./: .gitmodules  .hgignore  .hgreview  .hgsub  .hgsubstate  BUILD  CMakeLists.txt  LICENSE  Makefile  anno2z3.cpp  ar_wrapper.cpp  auto_tester.sh  bitbucket-pipelines.yml  check-with-valgrind.sh  comments.cpp  comments.h  config.h  copyclass.sh  extract-protobuf-desc.awk  generate_datatypes.hs  git_maker.sh  ini01_01.c  ini01_03.c  ini01_05.c  ini01_06.c  ini01_08.c  ini01_09.c  ini03_02.c  ini03_04.c  ini03_05.c  ini03_06.c  ini03_08.c  ini03_09.c  ini03_10.c  ini03_11.c  intrinsics.h  locations.h  log.ini  log.tests.ini  make-tplot.sh  (+18 more)
Actions/: GatherCommentsAction.cpp  VariableInfoFinder.cpp  VariableInfoFinder.h  comments.cpp  comments.h
Anno/: anno.cpp  anno.h  anno.hpp  anno2z3.cpp  calculator.hpp  command.hpp  grammar.hpp  locator.hpp  production.cpp  production.h  string_cast.hpp  zappo.hpp  zappo_macros.h  zappo_unmacros.h
Annotation/: Annotation.cpp  Annotation.def  Annotation.h  AnnotationCast.cpp  AnnotationCast.h  AnnotationContainer.cpp  AnnotationContainer.h  AnnotationNames.hpp  AssertAnnotation.cpp  AssertAnnotation.h  AssignsAnnotation.cpp  AssignsAnnotation.h  AssumeAnnotation.cpp  AssumeAnnotation.h  EndMaskAnnotation.cpp  EndMaskAnnotation.h  EnsuresAnnotation.cpp  EnsuresAnnotation.h  GlobalAnnotation.cpp  GlobalAnnotation.h  IgnoreAnnotation.cpp  IgnoreAnnotation.h  InlineAnnotation.cpp  InlineAnnotation.h  LogicAnnotation.cpp  LogicAnnotation.h  MaskAnnotation.cpp  MaskAnnotation.h  ProtobufConverterImpl.cpp  ProtobufConverterImpl.hpp  RequiresAnnotation.cpp  RequiresAnnotation.h  SkipAnnotation.cpp  SkipAnnotation.h  StackDepthAnnotation.cpp  StackDepthAnnotation.h  UnrollAnnotation.cpp  UnrollAnnotation.h
Codegen/: DiagnosticLogger.cpp  DiagnosticLogger.h  FileManager.cpp  FileManager.h  FuncInfo.h  VarInfo.h  VarInfoContainer.cpp  VarInfoContainer.h  builtins.cpp  builtins.h  intrinsics.cpp  intrinsics.h  intrinsics_manager.cpp  intrinsics_manager.h  intrinsics_registry.cpp  libFunc.h  llvm.cpp  llvm.h  scalarEvolutions.h
Config/: config.cpp  config.h
Database/: SerialTemplateSpec.hpp  Util.hpp
Driver/: AnnotatedModule.h  PortableModule.h  ar_facade.cpp  ar_facade.h  cl.cpp  cl.h  clang_pipeline.cpp  clang_pipeline.h  gestalt.cpp  gestalt.h  interviewer.cpp  interviewer.h  llvm_pipeline.cpp  llvm_pipeline.h  plugin_loader.cpp  plugin_loader.h  runner.cpp  runner.h
Executor/: AnnotationExecutor.cpp  AnnotationExecutor.h  Arbiter.cpp  Arbiter.h  Exceptions.cpp  Exceptions.h  Execution.cpp  ExecutionEngine.cpp  ExecutionEngine.h  Executor.cpp  Executor.h  FunctionCalls.cpp  InstructionExecutor.cpp  InstructionExecutor.h  MemoryProxy.cpp  MemoryProxy.h  MemorySimulator.cpp  MemorySimulator.h  SmtDrivenArbiter.cpp  SmtDrivenArbiter.h  StdLib.cpp
Factory/: Nest.cpp  Nest.h
GA/: dd_z3_params.py  mutate_z3_params.py  mutate_z3_tactics.py  z3_params_parse.awk
Interpreter/: ConditionSplitter.cpp  ConditionSplitter.h  Environment.cpp  Environment.h  IRInterpreter.cpp  IRInterpreter.h  InstructionVisitor.cpp  InstructionVisitor.h  Interpreter.cpp  Interpreter.h  OneForAllInterpreter.cpp  OneForAllInterpreter.h  OneForOneInterpreter.cpp  OneForOneInterpreter.h  PSInterpreter.cpp  PSInterpreter.h  PSInterpreterManager.cpp  PSInterpreterManager.h  State.cpp  State.h  Util.cpp  Util.h  Util.hpp
Logging/: log_entry.hpp  logger.hpp  logstream.cpp  logstream.hpp  tracer.cpp  tracer.hpp
Passes/: AbstractPredicateAnalysis.cpp  AbstractPredicateAnalysis.h  AggregateFunctionPass.hpp  AnnotationPredicateAnalysis.cpp  AnnotationPredicateAnalysis.h  AnnotationProcessor.cpp  AnnotationProcessor.h  AnnotatorPass.cpp  AnnotatorPass.h  AnnotatorPrinterPass.cpp  AnnotatorPrinterPass.h  CheckContractPass.cpp  CheckContractPass.h  CheckNullDereferencePass.cpp  CheckNullDereferencePass.h  CheckUndefValuesPass.cpp  CheckUndefValuesPass.h  Checkers.def  DataProvider.hpp  DefaultPredicateAnalysis.cpp  DefaultPredicateAnalysis.h  DefectManager.cpp  DefectManager.h  DefectSummaryPass.cpp  DefectSummaryPass.h  DetectNullPass.cpp  DetectNullPass.h  FunctionManager.cpp  FunctionManager.h  InitializationPass.cpp  InitializationPass.h  LoopDeroll.cpp  LoopDeroll.h  LoopManager.cpp  LoopManager.h  LoopUnroll.cpp  LoopUnroll.h  MallocMutator.cpp  MallocMutator.h  MetaInfoTrackerPass.cpp  (+33 more)
Predicate/: AllocaPredicate.cpp  AllocaPredicate.h  ArgumentTerm.cpp  ArgumentTerm.h  ArithPredicate.cpp  ArithPredicate.h  BooleanPredicate.cpp  BooleanPredicate.h  CallPredicate.cpp  CallPredicate.h  ConstTerm.h  DefaultSwitchCasePredicate.cpp  DefaultSwitchCasePredicate.h  EqualityPredicate.cpp  EqualityPredicate.h  FalsePredicate.cpp  FalsePredicate.h  GEPPredicate.cpp  GEPPredicate.h  GlobalsPredicate.cpp  GlobalsPredicate.h  ICmpPredicate.cpp  ICmpPredicate.h  InequalityPredicate.cpp  InequalityPredicate.h  LoadPredicate.cpp  LoadPredicate.h  MallocPredicate.cpp  MallocPredicate.h  MarkPredicate.cpp  MarkPredicate.h  Predicate.cpp  Predicate.def  Predicate.h  PredicateFactory.cpp  PredicateFactory.h  PredicateUtils.hpp  ProtobufConverterImpl.cpp  ProtobufConverterImpl.hpp  ReturnValueTerm.cpp  (+16 more)
Protobuf/: Converter.cpp  Converter.hpp  ConverterUtil.h
Query/: AndQuery.cpp  AndQuery.h  EqualityQuery.cpp  (+5 more)
lib/cfgparser/: INSTALL  Makefile.am  Makefile.in  cfgparser.patch  configure  configure.in
lib/cfgparser/autom4te.cache/: output.0  requests  traces.0
lib/cfgparser/debian/: libcfgparser.control  libcfgparser.postinst  libcfgparser.shlibs  make.sh
lib/cfgparser/include/: Makefile.am  Makefile.in  configwrapper.h
lib/cfgparser/src/: Makefile.am  Makefile.in  cfggetvalue.cc  cfgparser.cc  configwrapper.cc  test-cfgparser.cc
lib/dbglog/: Makefile.am  Makefile.in  configure  configure.in  libdbglog.pc.in
lib/dbglog/debian/: libdbglog-dev.control  libdbglog.control  libdbglog.shlibs  make.sh
lib/dbglog/include/: Makefile.am  Makefile.in
lib/dbglog/solaris/: libdbglog-dev.pkginfo  libdbglog.pkginfo  make.sh
lib/dbglog/src/: Makefile.am  Makefile.in  dbglog.cc  test-dbglog.c
(+1093 files in other folders)
