#
# Copyright (C) 2006  Seznam.cz, a.s.
#
# $Id: Makefile.am 329 2007-02-22 16:15:30Z blazek $
#
# DESCRIPTION
# A makefile template for dbglog library.
#
# AUTHORS
# Vaclav Blazek <blazek@firma.seznam.cz>
#
# HISTORY
# 2007-02-22  (vasek)
#             Created.
#

include_HEADERS = cfgparser.h configwrapper.h
