#
# Copyright (C) 2006  Seznam.cz, a.s.
#
# $Id: Makefile.am 1 2008-03-27 10:43:04Z chlastakov $
#
# DESCRIPTION
# A makefile template for dbglog library.
#
# AUTHORS
# Vaclav Blazek <blazek@firma.seznam.cz>
#
# HISTORY
# 2007-02-22  (vasek)
#             Created.
#

include_HEADERS = dbglog.h dbglogobject.h
